--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,85 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
 }
+.box:nth-child(1) {
+  background-image: url(../public//assets/katalog-1.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(2) {
+  background-image: url(../public//assets/katalog-2.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(3) {
+  background-image: url(../public//assets/katalog-3.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(4) {
+  background-image: url(../public//assets/katalog-4.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(5) {
+  background-image: url(../public//assets/katalog-5.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(6) {
+  background-image: url(../public//assets/katalog-6.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(7) {
+  background-image: url(../public//assets/katalog-7.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(8) {
+  background-image: url(../public//assets/katalog-8.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(9) {
+  background-image: url(../public//assets/katalog-9.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(10) {
+  background-image: url(../public//assets/katalog-10.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(11) {
+  background-image: url(../public//assets/katalog-11.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box:nth-child(12) {
+  background-image: url(../public//assets/katalog-12.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.box {
+  width: 25rem;
+  height: 30rem;
+  display: flex;
+}
+.box-title-left {
+  padding-left: 10px;
+  margin-top: 25rem;
+  font-size: 1.5rem;
+}
+.box-title-left p {
+  color: #9a9da0;
+}
+
+.box-title-right {
+  margin-top: 25rem;
+  font-size: 1.5rem;
+  padding-left: 6rem;
+}
+.box-title-right p {
+  color: #9a9da0;
+}
